--- a/index.html
+++ b/index.html
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="utf-8">
-    <title>sssysy测试</title>
-<style>
-body{
-    background-image: url('t.mwm.webp');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 100%;
-    margin: 0;
-}
-html{
-    height: 100%;
-}
+	<head>
+  		<meta charset="utf-8">
+  		<title>sssysy 个人主页</title>
+		<link rel="stylesheet" type="text/css" href="a.css">
+  </head>
+	<body class="background">
+  		<div class="div1">
+      	<img src="sssysy.jpg" class="logo" height="200px" alt="logo">
+      	<h1 class="name">sssysy</h1>
+      </div>
+  
+  
+  </body>
 
-</style>
-    </head>
-
-    <body>
-        <div>
-            <img src="sssysy.jpg" alt="个人头像" height=200px width=200px style="margin:0 auto;display: block;border-radius: 200px;margin-top: 40px;" >
-            <h1 style="text-align: center;margin-top: 10px;">
-                sssysy个人主页
-            </h1>
-        </div>
-        
-      <!--  <a href="https://space.bilibili.com/360238902" target="_blank" > <img src="bilibili.png" alt="bilibili"></a>  -->
-
-
-    </body>
 
 </html>
