更新b站主页链接

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       	<img src="sssysy.jpg" class="logo" height="200px" alt="logo">
       	<h1 class="name">sssysy</h1>
       </div>
-  
+  		<div class="div2">
+      <a href="https://b23.tv/bpdJQZR"><img src="bilibili.png" alt="bilibili" class="bilibili"></a>
+      
+      
+      </div>
   
   </body>
 
