--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
-  		<meta charset="utf-8">
-  		<title>sssysy 个人主页</title>
-		<link rel="stylesheet" type="text/css" href="a.css">
-  </head>
-	<body class="background">
-  		<div class="div1">
-      	<img src="sssysy.jpg" class="logo" height="200px" alt="logo">
-      	<h1 class="name">sssysy</h1>
-      </div>
-  		<div class="div2">
-      <a href="https://b23.tv/bpdJQZR"><img src="bilibili.png" alt="bilibili" class="bilibili"></a>
-      
-      
-      </div>
-  
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sssysy 个人主页</title>
+    <link rel="stylesheet" type="text/css" href="load.css">
+</head>
+<body>
+    <div class="profile">
+        <img src="sssysy.jpg" alt="个人头像">
+        <h1>sssysy 个人网站</h1>
+    </div>
 
-
+    <div class="products" >
+        <div class="product" onclick="window.open('https://space.bilibili.com/360238902','_self')">
+            <img src="bilibili.ico" alt="bilibili个人主页">
+            <p>哔哩哔哩</p>
+        </div>
+        <div class="product" onclick="window.open('https://github.com/sssysy','_self')">
+            <img src="github.ico" alt="github个人主页">
+            <p>Github</p>
+        </div>
+        <div class="product" onclick="window.open('https://wyapi.sssysyonline.top','_self')">
+            <img src="wyapi.ico" alt="网易云音乐NodejsApi 镜像">
+            <p>网易云音乐NodejsApi 镜像</p>
+        </div>
+        <div class="product" onclick="window.open('https://vpn.sssysyonline.top','_self')">
+            <img src="vpn.png" alt="azumase">
+            <p>VPN后台管理页面</p>
+        </div>
+    </div>
+</body>
 </html>
