--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="wyapi.ico" alt="网易云音乐NodejsApi 镜像">
             <p>网易云音乐NodejsApi 镜像</p>
         </div>
-        <div class="product" onclick="window.open('https://vpn.sssysyonline.top','_self')">
+        <div class="product" onclick="window.open('https://azumase.ren/#/stage/dashboard','_self')">
             <img src="vpn.png" alt="azumase">
             <p>VPN后台管理页面</p>
         </div>
