--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sssysy 个人主页</title>
     <link rel="stylesheet" type="text/css" href="load.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="profile">
@@ -13,20 +14,28 @@
     </div>
 
     <div class="products" >
-        <div class="product" onclick="window.open('https://space.bilibili.com/360238902','_self')">
-            <img src="bilibili.ico" alt="bilibili个人主页">
+        <div class="product"> 
+            <a href="https://space.bilibili.com/360238902">
+                <img src="bilibili.ico" alt="bilibili个人主页" >
+            </a>
             <p>哔哩哔哩</p>
         </div>
-        <div class="product" onclick="window.open('https://github.com/sssysy','_self')">
-            <img src="github.ico" alt="github个人主页">
+        <div class="product">
+            <a href="https://github.com/sssysy">
+                <img src="github.ico" alt="github个人主页">
+            </a>
             <p>Github</p>
         </div>
-        <div class="product" onclick="window.open('https://wyapi.sssysyonline.top','_self')">
-            <img src="wyapi.ico" alt="网易云音乐NodejsApi 镜像">
+        <div class="product">
+            <a href="https://wyapi.sssysyonline.top">
+                <img src="wyapi.ico" alt="网易云音乐NodejsApi 镜像">
+            </a>
             <p>网易云音乐NodejsApi 镜像</p>
         </div>
-        <div class="product" onclick="window.open('https://azumase.ren/#/stage/dashboard','_self')">
-            <img src="vpn.png" alt="azumase">
+        <div class="product">
+            <a href="https://vpn.sssysyonline.top">
+                <img src="vpn.png" alt="azumase">
+            </a>
             <p>VPN后台管理页面</p>
         </div>
     </div>
