修改vpn后台地址
修改vpn后台地址

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>网易云音乐NodejsApi 镜像</p>
         </div>
         <div class="product">
-            <a href="https://vpn.sssysyonline.top">
+            <a href="https://azumase.ren/#/stage/dashboard">
                 <img src="vpn.png" alt="azumase">
             </a>
             <p>VPN后台管理页面</p>
