--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <p>哔哩哔哩</p>
         </div>
         <div class="product">
-            <a href="https://github.com/sssysy">
-                <img src="github.ico" alt="github个人主页">
+            <a href="http://sssysy.ys168.com/">
+                <svg t="1711805559766" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="7786" width="130" height="130"><path d="M556.976 562.752h73.28a25.536 25.536 0 0 0 18.32-43.36l-109.728-112.576a25.536 25.536 0 0 0-36.576 0l-109.712 112.592a25.536 25.536 0 0 0 18.32 43.408h73.2v99.184a36.448 36.448 0 0 0 72.896 0v-99.248zM238.272 892.56C105.952 888.4 0 781.168 0 649.488c0-123.952 93.952-226.272 215.424-241.28C221.552 252.48 351.376 128 510.624 128c159.264 0 289.168 124.48 295.232 280.272 121.456 14.944 215.424 117.264 215.424 241.216 0 131.296-105.328 238.272-237.072 243.008v0.192h-545.92v-0.128z" fill="#7A7F8F" p-id="7787"></path></svg>
             </a>
             <p>Github</p>
         </div>
@@ -33,7 +33,7 @@
             <p>网易云音乐NodejsApi 镜像</p>
         </div>
         <div class="product">
-            <a href="https://vpn.sssysyonline.top">
+            <a href="https://azumase.ren/#/stage/dashboard">
                 <img src="vpn.png" alt="azumase">
             </a>
             <p>VPN后台管理页面</p>
